traefik-manifests/middleware-authentik-forwardauth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: middleware-authentik-forwardauth
  namespace: traefik
spec:
  forwardAuth:
    address: https://authentik.talos.manishreddy.uk/outpost.goauthentik.io/auth/traefik
    authResponseHeaders:
      - X-Authentik-Username
      - X-Authentik-Groups
      - X-Authentik-Email
    trustForwardHeader: true
