traefik-manifests/ingressroute.longhorn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  namespace: kasten-io
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`longhorn.talos.manishreddy.uk`)
      kind: Rule
      middlewares:
        - name: longhorn-dashboard-redirect
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    certResolver: cloudflare
